objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>GLI Pipeline Opportunity Sales process</fullName>
        <description>For GLI users</description>
        <isActive>true</isActive>
        <values>
            <fullName>Appointment Scheduled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Generate Contract</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiate Contract</fullName>
        </values>
        <values>
            <fullName>Order Complete</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Solution Recommended</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pipeline Opportunity Sales process</fullName>
        <description>All opportunity records in an active sales stage</description>
        <isActive>true</isActive>
        <values>
            <fullName>0%25</fullName>
        </values>
        <values>
            <fullName>10%25</fullName>
        </values>
        <values>
            <fullName>100%25</fullName>
        </values>
        <values>
            <fullName>25%25</fullName>
        </values>
        <values>
            <fullName>5%25</fullName>
        </values>
        <values>
            <fullName>50%25</fullName>
        </values>
        <values>
            <fullName>75%25</fullName>
        </values>
        <values>
            <fullName>90%25</fullName>
        </values>
        <values>
            <fullName>95%25</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pre-Pipeline Opportunity Sales Process</fullName>
        <description>All opportunity records not currently in a sales stage</description>
        <isActive>true</isActive>
        <values>
            <fullName>1%25</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AM_Territory_Number__c</fullName>
        <formula>Account.AMTerritory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Territory Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMi_Territory_Number__c</fullName>
        <formula>Account.AMI_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMi Territory Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CreateSSD__c</fullName>
        <formula>HYPERLINK(&quot;/apex/CreateSSD?id=&quot; &amp; Id ,IMAGE(&quot;/resource/CreateSSDButton&quot;, &quot;Create SSD&quot;) , &apos;_self&apos;)</formula>
        <label>Create Acct SSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Order_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_Is_Order_Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Proposal_Business_Unit__c</fullName>
        <label>Proposal Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>SCS</fullName>
                </value>
                <value>
                    <fullName>Russia-1S</fullName>
                </value>
                <value>
                    <fullName>SouthKorea-DUZON</fullName>
                </value>
                <value>
                    <fullName>Dofiscal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Notice_Date__c</fullName>
        <label>Renewal Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AR_Territory_Number__c</fullName>
        <formula>Account.ARTerritory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR Territory Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alternate_Phone__c</fullName>
        <formula>Account.PhoneNumberTwo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Alternate Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Change_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account/Contact Change Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Credit_Risk__c</fullName>
        <formula>IF(UPPER(Account.Credit_Issue__c) = &apos;CREDIT RISK&apos;,IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Credit Risk&apos;),&apos;&apos;)</formula>
        <label>Account Credit Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Product_Participation__r.CreatedBy.FirstName + &quot; &quot; + Product_Participation__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ AccountId,  Account.Name,&apos;_self&apos;)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of Lotus program for DPS-5081</description>
        <label>Active Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <description>The Date/Time will be populated by a workflow rule when the opportunity reaches 100%</description>
        <label>Actual Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Number_Texts_Ordered__c</fullName>
        <label>Number of Texts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adoption_Status__c</fullName>
        <label>Adoption Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order In</fullName>
                </value>
                <value>
                    <fullName>Adoption Confirmed</fullName>
                </value>
                <value>
                    <fullName>Deciding</fullName>
                </value>
                <value>
                    <fullName>Stock Already</fullName>
                </value>
                <value>
                    <fullName>No TR Option</fullName>
                </value>
                <value>
                    <fullName>No Order</fullName>
                </value>
                <value>
                    <fullName>Course Not Running</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adoption_Type__c</fullName>
        <label>Adoption Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Rollover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_using_Actual_Close_Date__c</fullName>
        <formula>CASE(StageName, &apos;100%&apos;, DATEVALUE(Actual_Close_Date__c)-DATEVALUE(CreatedDate), TODAY()-DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (using Actual Close Date)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_using_Contract_Signed_Date__c</fullName>
        <description>created for DPS-21272</description>
        <formula>CASE(StageName, &apos;100%&apos;, Contract_Closed_Date__c-DATEVALUE(CreatedDate), TODAY()-DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (using Contract Signed Date)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Quote_Count__c</fullName>
        <description>Count All records should be included in the calculation</description>
        <label>Quote Count</label>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Displayed__c</fullName>
        <formula>IF(  BEGINS($Profile.Name, &quot;Elite&quot;) , LCRM_Total_Incremental_Family__c ,
IF( OR( BEGINS($Profile.Name, &quot;GLI&quot;), BEGINS($Profile.Name, &quot;USL&quot;))  , LCRM_Total_New_ACV_Sales_Price__c,  Amount ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Base_Price_Rollup__c</fullName>
        <label>Annualized Base Price</label>
        <summarizedField>OpportunityLineItem.Annualized_Base_Price__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annualized_Base_Price__c</fullName>
        <inlineHelpText>Last Subscription Value on an annual basis.</inlineHelpText>
        <label>Annualized Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Sales__c</fullName>
        <label>Anticipated Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Pricing Approval</fullName>
                </value>
                <value>
                    <fullName>Pricing Approved</fullName>
                </value>
                <value>
                    <fullName>Pricing Approval Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Manager Approval</fullName>
                </value>
                <value>
                    <fullName>Quote Approved</fullName>
                </value>
                <value>
                    <fullName>Quote Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation Approval</fullName>
                </value>
                <value>
                    <fullName>Cancellation Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancellation Approved</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Pending Removal</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Date_Time__c</fullName>
        <label>Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Auto_Manual_Path__c</fullName>
        <formula>&quot;Auto&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Manual Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Split_Amount_Subtotal_Variance__c</fullName>
        <description>[BRS_MS9.1.09] Amount – Billing_Account_Split_Amount_Subtotal__c</description>
        <formula>IF((Amount - ROUND(BA_Split_Amount_Subtotal__c, 2)) &lt; 0.03  &amp;&amp; (Amount - ROUND(BA_Split_Amount_Subtotal__c, 2)) &gt; -0.03,  0.00, Amount - ROUND(BA_Split_Amount_Subtotal__c, 2))</formula>
        <inlineHelpText>Calculates the difference between the Master Opportunity and related child Billing Account Splits in order to provide user feedback</inlineHelpText>
        <label>BA Split Amount Subtotal Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BA_Split_Amount_Subtotal__c</fullName>
        <description>[BRS_MS9.1.08] Rollup Summary SUM(Billing_Account_Split__c.Subtotal_Amount__c)</description>
        <inlineHelpText>Sum of the Subtotal Amount of all related child Billing Account Splits.</inlineHelpText>
        <label>BA Split Amount Subtotal</label>
        <summarizedField>Billing_Account_Split__c.Subtotal_Amount__c</summarizedField>
        <summaryForeignKey>Billing_Account_Split__c.Master_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BA_Split_Variance_Status__c</fullName>
        <description>[BRS_MS9.1.10] Display an icon image of checkmark if zero, warning is positive and error if negative.</description>
        <formula>IF( BA_Split_Amount_Subtotal_Variance__c = 0,IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;CheckMark&quot;),
IF( BA_Split_Amount_Subtotal_Variance__c &gt; 0,IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Warning&quot;), IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Error&quot;)))</formula>
        <inlineHelpText>Indicates whether the variance is zero, positive or negative based on the BA_Split_Amount_Subtotal_Variance__c field</inlineHelpText>
        <label>BA Split Variance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Segment__c</fullName>
        <description>Created as part of data segmentation for LOTUS, should hold different Business Segments. DPS-1442</description>
        <label>Frozen Market Current Year Segment L1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A.B.N. AMRO BANK N.V.</fullName>
                </value>
                <value>
                    <fullName>AMERICAN EXPRESS BANK LTD. S.A.</fullName>
                </value>
                <value>
                    <fullName>BACS BANCO DE CREDITO Y SECURITIZACION S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO B. I. CREDITANSTALT S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO BICE</fullName>
                </value>
                <value>
                    <fullName>BANCO BILBAO VIZCAYA ARGENTARIA, CHILE (BBVA)</fullName>
                </value>
                <value>
                    <fullName>BANCO BRADESCO ARGENTINA S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO CETELEM ARGENTINA S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO CMF S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO COFIDIS S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO COLUMBIA S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO COMAFI S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO CONSORCIO (ex BANCO MONEX)</fullName>
                </value>
                <value>
                    <fullName>BANCO CREDICOOP COOPERATIVO LIMITADO</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CORRIENTES S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CREDITO E INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>BANCO DE FORMOSA S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO DE GALICIA Y BUENOS AIRES S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO DE INVERSION Y COMERCIO EXTERIOR S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO DE LA CIUDAD DE BUENOS AIRES</fullName>
                </value>
                <value>
                    <fullName>BANCO DE LA NACION ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>BANCO DE LA PAMPA SOCIEDAD DE ECONOMIA MIXTA</fullName>
                </value>
                <value>
                    <fullName>BANCO DE LA PROVINCIA DE BUENOS AIRES</fullName>
                </value>
                <value>
                    <fullName>BANCO DE LA PROVINCIA DE CORDOBA S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO DE LA REPUBLICA ORIENTAL DEL URUGUAY</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL CHUBUT S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL SOL S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL TUCUMAN S.A.</fullName>
                </value>
                <value>
                    <fullName>BANCO DE SAN JUAN S.A.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To_Account_SSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of DPS-16054</description>
        <label>Bill To Acct SSD</label>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipLabel>Opportunities (Bill To Account SSD)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_SSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of DPS-16054</description>
        <label>Bill To Contact</label>
        <referenceTo>LCRM_Contact_SSD__c</referenceTo>
        <relationshipLabel>Opportunities (Bill To Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Party__c</fullName>
        <description>BILLTOPRTY	Bill To Party	Number</description>
        <label>Bill To Party</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Id__c</fullName>
        <description>Child Opportunity which holds Billing Account ID from which Child Opportunity is genretated</description>
        <label>Billing Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>Account.BillingState</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Books_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Books Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Created as part of DPS-8814 for Lotus program</description>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Mapping in the Brand field from SAP on Renewal Quote records.  It provides the TSL business unit information.</description>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBU__c</fullName>
        <label>CBU/Cta.Bancaria</label>
        <length>22</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Campaign_Cell__c</fullName>
        <description>If the opportunity is from Unica, this field will default to the Campaign Cell (Cell Code Description).</description>
        <label>Campaign Cell</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>Campaign code. Manually entered by Sales Reps. For Telemarketing in Argentina. Used for commission purposes. Data is loaded to LATAM db and then to commissions system (SICO) to be used in commission calculations. OV will not be dependent on any SFDC info for commissions once LATAM is live on OV.</description>
        <label>Campaign Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Contact_Channel__c</fullName>
        <formula>Campaign.Contact_Channel__c</formula>
        <label>Campaign Contact Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <description>S_SRC.COMMENTS</description>
        <label>Campaign Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>For LatAm users to be added in List view.</description>
        <formula>Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Tracking_Code__c</fullName>
        <label>Tracking Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Created for LatAm&apos;s opportunity categorization.  Sub Category is dependent on Category.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DELIVERED TO RESELLER</fullName>
                </value>
                <value>
                    <fullName>ONE SHOT</fullName>
                </value>
                <value>
                    <fullName>RESELLER COMPLETES SALE</fullName>
                </value>
                <value>
                    <fullName>SEMINARIO</fullName>
                </value>
                <value>
                    <fullName>SOFTWARE, RENOVACIÓN Y SERVICIOS</fullName>
                </value>
                <value>
                    <fullName>SOFTWARE EMPRESAS, SIST. CONTABLES Y SAAS</fullName>
                </value>
                <value>
                    <fullName>SUSCRIPCION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_renewal_date__c</fullName>
        <formula>IF(AND( No_of_Days_del__c &gt;= 90, No_of_Days_del__c &lt;= 120), &apos;90 &lt;= 120&apos;,IF(AND( No_of_Days_del__c &gt;= 60, No_of_Days_del__c &lt;= 90), &apos;60 &lt;= 90&apos;,IF(AND( No_of_Days_del__c &gt;= 30, No_of_Days_del__c &lt;= 60), &apos;30 &lt;= 60&apos;,IF(AND( No_of_Days_del__c &gt;= 0, No_of_Days_del__c &lt;= 30), &apos;&lt;= 30&apos;,&apos;More than 120&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category renewal date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Actual_Projected_Rollup__c</fullName>
        <inlineHelpText>Actual Renewal Price vs Projected Renewal Price</inlineHelpText>
        <label>Renewal Change (Actual - Projected)</label>
        <summarizedField>OpportunityLineItem.Change_Actual_Projected__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Change_Actual_Projected__c</fullName>
        <formula>100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change (Actual - Projected)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IF (CreatedBy.Profile.Name = &quot;TR Legal Read-Only User&quot;, &quot;Tier 2&quot;, 
IF (CreatedBy.UserRole.Name = &quot;Director&quot;, &quot;Tier 2&quot;, 
IF (CreatedBy.UserRole.Name = &quot;WPD - Marketing&quot;, &quot;Tier 2&quot;, 
IF (CreatedBy.Profile.Name = &quot;TR Legal FindLaw User&quot;, &quot;FindLaw&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;Large Law&quot;), &quot;Large Law&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;Law Firm&quot;), &quot;Large Law&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;National&quot;), &quot;Large Law&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;LL&quot;), &quot;Large Law&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;SAM&quot;), &quot;Small Law&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;Small Law&quot;), &quot;Small Law&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;Home Office&quot;), &quot;Inside Sales&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;Corp&quot;), &quot;Corp&quot;, 
IF (CONTAINS(CreatedBy.UserRole.Name, &quot;Govt&quot;), &quot;Govt&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;WPD&quot;), &quot;WPD&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;ANZ&quot;), &quot;ANZ&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;AU&quot;), &quot;AU&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;HK&quot;), &quot;HK&quot;, 
IF (BEGINS(CreatedBy.UserRole.Name, &quot;NZ&quot;), &quot;NZ&quot;, 
IF (BEGINS(CreatedBy.Profile.Name, &quot;ANZ&quot;), &quot;ANZ&quot;, 
IF (CreatedBy.FirstName = &quot;Informatica&quot;, &quot;Informatica&quot;,
IF (CONTAINS(CreatedBy.Profile.Name, &quot;Admin&quot;), &quot;MIS/Admin&quot;,

CreatedBy.UserRole.Name
)))))))))))))))))))))</formula>
        <label>Created By Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Amount_Subtotal_Variance__c</fullName>
        <description>Holds the difference between the Master Opportunity and related Child Opportunities in order to validate a match.  Populated by Apex Class.</description>
        <inlineHelpText>Holds the difference between the Master Opportunity and related Child Opportunities in order to validate a match.</inlineHelpText>
        <label>Child Amount Subtotal Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Child_Opportunity_Amount_Subtotal__c</fullName>
        <description>[BRS_MS9.1.04]Sum of the Subtotal Amount of all related child opportunities.
* Dependencies – Opportunity Trigger</description>
        <inlineHelpText>Indicates the Sum of the Subtotal Amount of all related child opportunities.</inlineHelpText>
        <label>Child Opportunity Amount Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City_State__c</fullName>
        <description>Billing City/State from the Account object.</description>
        <formula>Account.Billing_City_State__c</formula>
        <label>City/State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_at_Risk__c</fullName>
        <description>Client at Risk from the Account object.</description>
        <formula>TEXT(Account.Client_at_Risk__c)</formula>
        <label>Client at Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Month_Name__c</fullName>
        <description>Used for reporting purposes only</description>
        <formula>Case( 
IF(len(text(month(CloseDate)))=1, &apos;0&apos;+text(month(CloseDate)), text(month(CloseDate))), 

&quot;01&quot;,&quot;01-Jan&quot;, 
&quot;02&quot;,&quot;02-Feb&quot;, 
&quot;03&quot;,&quot;03-Mar&quot;, 
&quot;04&quot;,&quot;04-Apr&quot;, 
&quot;05&quot;,&quot;05-May&quot;, 
&quot;06&quot;,&quot;06-Jun&quot;, 
&quot;07&quot;,&quot;07-Jul&quot;, 
&quot;08&quot;,&quot;08-Aug&quot;, 
&quot;09&quot;,&quot;09-Sep&quot;, 
&quot;10&quot;,&quot;10-Oct&quot;, 
&quot;11&quot;,&quot;11-Nov&quot;, 
&quot;12&quot;,&quot;12-Dec&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Month Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Year_YYYY__c</fullName>
        <description>For reporting use only</description>
        <formula>year(CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Year (YYYY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_New_Sales_95_100__c</fullName>
        <formula>CASE(StageName, &quot;95%&quot;, Total_Incremental_Personal_Currency__c, &quot;100%&quot;, Total_Incremental_Personal_Currency__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed New Sales (95% &amp; 100%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_New_Sales_Renewals_95_100__c</fullName>
        <formula>If( 
or(ispickval(StageName, &quot;95%&quot;),ispickval(StageName, &quot;100%&quot;)) 
, Total_Incremental_Personal_Currency__c + Total_Renewal_Personal_Currency__c 
, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed New Sales &amp; Renewals (95% &amp; 100%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Renewals_95_100__c</fullName>
        <formula>CASE(StageName, &quot;95%&quot;, Total_Renewal_Personal_Currency__c, &quot;100%&quot;, Total_Renewal_Personal_Currency__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Renewals (95% &amp; 100%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commit_Closed_New_Sales_90_95_100__c</fullName>
        <formula>CASE(StageName, 
&quot;90%&quot;, Total_Incremental_Personal_Currency__c,
&quot;95%&quot;, Total_Incremental_Personal_Currency__c, 
&quot;100%&quot;, Total_Incremental_Personal_Currency__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit &amp; Closed New Sales (90%,95%,100%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>